[metadata]
name = psg
version = 0.0.2
author = siphr
author_email = pypi@techtum.dev
description = Pakistan SUI Gas Bills and Tariff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev/work-psg-220228.html#work-psg-220228
project_urls =
    Bug Tracker = https://github.com/siphr/psg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = psg
python_requires = >=3.6

[options.packages.find]
where = src
